# HomeUI

./: .dockerignore  .gitattributes  CMakeLists.txt  README.md
config/: dashboard.json
docker/: Dockerfile.pi-build  build-in-container.sh  install-build-deps.sh
docs/: dashboard-config.md  dashboard-home.json  deployment.md  items.json  openhab-touch-ui-plan.md
editor/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vitest.config.ts
editor/client/: index.html  vite.config.ts
editor/client/src/: App.css  App.tsx  api.ts  pageUtils.ts
editor/client/src/components/: ColumnsEditor.tsx  LayoutPreview.tsx  OverlayEditor.tsx  PageSidebar.tsx  PanelInspector.tsx  PanelListEditor.tsx
editor/server/: config.ts  index.ts  validation.ts
editor/shared/: columnsLayout.ts  constants.ts  gridLayout.ts  layout.test.ts  masonry.ts  overlayCoords.ts  panelHeights.ts  panelStubs.ts  types.ts
packaging/autostart/: homeui-wayland.desktop  homeui.desktop
packaging/desktop/: homeui.desktop
packaging/systemd/: homeui-system.service  homeui.service
qml/: Main.qml
qml/components/: CameraTile.qml  ColorTile.qml  ConfiguredPage.qml  ConfiguredPanel.qml  ControlTile.qml  ControlsPanel.qml  DimmerTile.qml  DropdownTile.qml  EnergyPanel.qml  Format.js  GrafanaPanel.qml  HistorySparkline.qml  IrrigationFloorplanPanel.qml  MetricRow.qml  ModePanel.qml  MqttPanel.qml  PageDots.qml  PowerButtons.qml  ProgressTile.qml  RoomPanel.qml  SceneTile.qml  SchematicPanel.qml  SelectorTile.qml  ShutterTile.qml  SonosPanel.qml  StatusBar.qml  SwitchTile.qml  ThermostatTile.qml  TunableWhiteTile.qml
scripts/: build-pi-docker.sh  install-pi-deps.sh  install-service.sh  validate-dashboard.py
src/: DashboardConfig.cpp  DashboardConfig.h  InfluxHistoryClient.cpp  InfluxHistoryClient.h  MjpegView.cpp  MjpegView.h  MqttClient.cpp  MqttClient.h  OpenHabClient.cpp  OpenHabClient.h  ScreenIdleController.cpp  ScreenIdleController.h  SonosClient.cpp  SonosClient.h  main.cpp
